# terminal_quizlit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: main.rs  quizlit.rs  requests.rs  schema.rs  template.rs
templates/: base.txt  order_question.txt  true_false_question.txt  user_input_question.txt
