[package]
name = "terminal_quizlit"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonschema = { version = "0.18.0", features = ["draft202012", "resolve-http", "resolve-file"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
